--- a/.github/workflows/github_copilot_license_management.yml
+++ b/.github/workflows/github_copilot_license_management.yml
@@ -129,7 +129,7 @@ jobs:
           script: |
             const { Octokit } = require("@octokit/action");            
             const octokit = new Octokit();            
-            const response = await octokit.graphql(`query {
+            const response_find = await octokit.graphql(`query {
               user(login: "${context.payload.sender.login}") {
                 email
                 id
@@ -140,7 +140,24 @@ jobs:
                 'X-GitHub-Api-Version': '2022-11-28'
               }
             })
-            return response.status >= 200 && response.status < 300 ? response.user.email : 'failure'
+            const userEmail = response_find.user.email;
+            const response_invite = await octokit.graphql(`mutation {
+              inviteEnterpriseMember(input: { email: "${userEmail}", enterpriseId: "${ENTERPRISE_ID}" }) {
+                clientMutationId
+                invitation {
+                  email
+                  invitee {
+                    login
+                    id
+                  }
+                }
+              }
+            }`, {
+              headers: {
+                'X-GitHub-Api-Version': '2022-11-28'
+              }
+            });
+            return response_invite.status >= 200 && response_invite.status < 300 ? 'success' : 'failure'
       # If the previous step was successful, this step comments on the issue and closes it
       - name: Comment and close GitHub Issue on success
         if: steps.remove_license.outcome == 'success'
