--- a/.github/workflows/github_copilot_license_management.yml
+++ b/.github/workflows/github_copilot_license_management.yml
@@ -141,8 +141,9 @@ jobs:
               }
             })
             const userEmail = response_find.user.email;
+            const enterpriseId = process.env.ENTERPRISE_ID || '${{ secrets.ENTERPRISE_ID }}';
             const response_invite = await octokit.graphql(`mutation {
-              inviteEnterpriseMember(input: { email: "${userEmail}", enterpriseId: "${process.env.ENTERPRISE_ID}" }) {
+              inviteEnterpriseMember(input: { email: "${userEmail}", enterpriseId: "${enterpriseId}" }) {
                 clientMutationId
                 invitation {
                   email
