--- a/.github/workflows/github_copilot_license_management.yml
+++ b/.github/workflows/github_copilot_license_management.yml
@@ -110,20 +110,13 @@ jobs:
           node-version: 20
       # This step installs the @octokit/action npm package
       - run: npm install @octokit/action
-      # This step gets a GitHub App installation access token
-      - name: Get Token
-        id: get_workflow_token
-        uses: peter-murray/workflow-application-token-action@v3
-        with:
-          application_id: ${{ secrets.APPLICATION_ID }}
-          application_private_key: ${{ secrets.APPLICATION_PRIVATE_KEY }}      
       # This step assigns a GitHub Copilot license to the user who created the issue
       - name: Remove GitHub Copilot license
         id: remove_license
         continue-on-error: true
         uses: actions/github-script@v7
         env:
-          GITHUB_TOKEN: ${{ steps.get_workflow_token.outputs.token }} 
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
           ENTERPRISE_ID: ${{ secrets.ENTERPRISE_ID }}
         with:
           script: |
@@ -137,7 +130,8 @@ jobs:
               }
             }`, {
               headers: {
-                'X-GitHub-Api-Version': '2022-11-28'
+                'X-GitHub-Api-Version': '2022-11-28',
+                'Authorization': `Bearer ${process.env.GITHUB_TOKEN}`
               }
             })
             const userEmail = response_find.user.email;
@@ -155,7 +149,8 @@ jobs:
               }
             }`, {
               headers: {
-                'X-GitHub-Api-Version': '2022-11-28'
+                'X-GitHub-Api-Version': '2022-11-28',
+                'Authorization': `Bearer ${process.env.GITHUB_TOKEN}`
               }
             });
             return response_invite.status >= 200 && response_invite.status < 300 ? 'success' : 'failure'
