--- a/.github/workflows/github_copilot_license_management.yml
+++ b/.github/workflows/github_copilot_license_management.yml
@@ -135,24 +135,8 @@ jobs:
               }
             })
             const userEmail = response_find.user.email;
-            const response_invite = await octokit.graphql(`mutation {
-              inviteEnterpriseMember(input: { email: "${userEmail}", enterpriseId: 'E_kgDOAAMYHA' }) {
-                clientMutationId
-                invitation {
-                  email
-                  invitee {
-                    login
-                    id
-                  }
-                }
-              }
-            }`, {
-              headers: {
-                'X-GitHub-Api-Version': '2022-11-28',
-                'Authorization': `Bearer ${process.env.GITHUB_TOKEN}`
-              }
-            });
-            return response_invite.status >= 200 && response_invite.status < 300 ? 'success' : 'failure'
+            
+            return response_find.status >= 200 && response_find.status < 300 ? 'success' : 'failure'
       # If the previous step was successful, this step comments on the issue and closes it
       - name: Comment and close GitHub Issue on success
         if: steps.remove_license.outcome == 'success'
