--- a/.github/workflows/github_copilot_license_management.yml
+++ b/.github/workflows/github_copilot_license_management.yml
@@ -110,9 +110,9 @@ jobs:
           node-version: 20
       # This step installs the @octokit/action npm package
       - run: npm install @octokit/action
-      # This step assigns a GitHub Copilot license to the user who created the issue
-      - name: Remove GitHub Copilot license
-        id: remove_license
+      # This step finds the user's login email
+      - name: Find login email
+        id: find_login_email
         continue-on-error: true
         uses: actions/github-script@v7
         env:
@@ -134,12 +134,64 @@ jobs:
                 'Authorization': `Bearer ${process.env.GITHUB_TOKEN}`
               }
             })
-            const userEmail = response_find.user.email;
             
-            return response_find.status >= 200 && response_find.status < 300 ? 'success' : 'failure'
+            return response_find.status >= 200 && response_find.status < 300 ? response_find.user.email : 'failure'
+      # This step finds enterprise id given slug
+      - name: Find enterprise id
+        id: find_enterprise
+        continue-on-error: true
+        uses: actions/github-script@v7
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
+          ENTERPRISE_ID: ${{ secrets.ENTERPRISE_ID }}
+        with:
+          script: |
+            const { Octokit } = require("@octokit/action");
+            const octokit = new Octokit();
+            const response = await octokit.graphql(`query {
+              enterprise(slug: "${process.env.ENTERPRISE_ID}") {
+                id
+              }
+            }`, {
+              headers: {
+                'X-GitHub-Api-Version': '2022-11-28',
+                'Authorization': `Bearer ${process.env.GITHUB_TOKEN}`
+              }
+            });
+            return response.status >= 200 && response.status < 300 ? response.enterprise.id : 'failure'
+      # This step invites user to enterprise
+      - name: Invite enterprise user
+        id: invite_login_email
+        if: steps.find_login_email.outcome != 'failure' and steps.find_enterprise.outcome != 'failure'
+        uses: actions/github-script@v7
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
+          ENTERPRISE_ID: ${{ secrets.ENTERPRISE_ID }}
+        with:
+          script: |
+            const { Octokit } = require("@octokit/action");            
+            const octokit = new Octokit();            
+            const response_invite = await octokit.graphql(`mutation {
+              inviteEnterpriseMember(input: { email: "${steps.find_login_email.outcome}", enterpriseId: "${steps.find_enterprise.outcome}" }) {
+                clientMutationId
+                invitation {
+                  email
+                  invitee {
+                    login
+                    id
+                  }
+                }
+              }
+            }`, {
+              headers: {
+                'X-GitHub-Api-Version': '2022-11-28',
+                'Authorization': `Bearer ${process.env.GITHUB_TOKEN}`
+              }
+            });
+            return response_invite.status >= 200 && response_invite.status < 300 ? 'success' : 'failure'
       # If the previous step was successful, this step comments on the issue and closes it
       - name: Comment and close GitHub Issue on success
-        if: steps.remove_license.outcome == 'success'
+        if: steps.invite_login.outcome != 'failure'
         uses: actions/github-script@v7
         with:
           script: |
