--- a/.github/workflows/github_copilot_license_management.yml
+++ b/.github/workflows/github_copilot_license_management.yml
@@ -136,33 +136,10 @@ jobs:
             })
             
             return response_find.status >= 200 && response_find.status < 300 ? response_find.user.email : 'failure'
-      # This step finds enterprise id given slug
-      - name: Find enterprise id
-        id: find_enterprise
-        continue-on-error: true
-        uses: actions/github-script@v7
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
-          ENTERPRISE_ID: ${{ secrets.ENTERPRISE_ID }}
-        with:
-          script: |
-            const { Octokit } = require("@octokit/action");
-            const octokit = new Octokit();
-            const response = await octokit.graphql(`query {
-              enterprise(slug: "criticalsoftware") {
-                id
-              }
-            }`, {
-              headers: {
-                'X-GitHub-Api-Version': '2022-11-28',
-                'Authorization': `Bearer ${process.env.GITHUB_TOKEN}`
-              }
-            });
-            return response.status >= 200 && response.status < 300 ? response.enterprise.id : 'failure'
       # This step invites user to enterprise
       - name: Invite enterprise user
         id: invite_login_email
-        if: steps.find_login_email.outcome != 'failure' && steps.find_enterprise.outcome != 'failure'
+        if: steps.find_login_email.outcome != 'failure'
         uses: actions/github-script@v7
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
@@ -172,7 +149,7 @@ jobs:
             const { Octokit } = require("@octokit/action");            
             const octokit = new Octokit();            
             const response_invite = await octokit.graphql(`mutation {
-              inviteEnterpriseMember(input: { email: "${steps.find_login_email.outcome}", enterpriseId: "${steps.find_enterprise.outcome}" }) {
+              inviteEnterpriseMember(input: { email: "${steps.find_login_email.outcome}"}) {
                 clientMutationId
                 invitation {
                   email
