--- a/.github/workflows/github_copilot_license_management.yml
+++ b/.github/workflows/github_copilot_license_management.yml
@@ -136,7 +136,7 @@ jobs:
             })
 
             const response_invite = await octokit.graphql(`mutation {
-              inviteEnterpriseMember(input: { email: "${response_find.user.email}" }) {
+              inviteEnterpriseMember(input: { email: "${response_find.user.email}", enterpriseId: "${process.env.ENTERPRISE_ID}" }) {
                 clientMutationId
                 invitation {
                   email
