--- a/.github/workflows/github_copilot_license_management.yml
+++ b/.github/workflows/github_copilot_license_management.yml
@@ -113,12 +113,26 @@ jobs:
       # This step gets the token
       - name: Generate a token
         id: generate-token
-        uses: actions/create-github-app-token@v2
+        uses: actions/github-script@v7
         with:
-          app-id: ${{ secrets.APPLICATION_ID }}
-          private-key: ${{ secrets.APPLICATION_PRIVATE_KEY }}
-          owner: ${{ github.repository_owner }}
-          repositories: ${{ github.event.repository.name }}
+          script: |
+            const { createAppAuth } = require("@octokit/auth-app");
+            const jwt = require("jsonwebtoken");
+            const appId = process.env.APP_ID;
+            const privateKey = process.env.PRIVATE_KEY;
+            // JWT expiration (max 10 minutes)
+            const now = Math.floor(Date.now() / 1000);
+            const payload = {
+              iat: now - 60, // issued at time, 60 seconds in the past to allow for clock drift
+              exp: now + (10 * 60), // expires after 10 minutes
+              iss: appId // GitHub App's identifier
+            };
+            const token = jwt.sign(payload, privateKey, { algorithm: 'RS256' });
+            return token;
+        env:
+          APP_ID: ${{ secrets.APPLICATION_ID }}
+          PRIVATE_KEY: ${{ secrets.APPLICATION_PRIVATE_KEY }}
+          INSTALLATION_ID: ${{ secrets.INSTALLATION_ID }}
       # This step finds the user's login email
       - name: Invite login email
         id: invite_login_email
