--- a/.github/workflows/github_copilot_license_management.yml
+++ b/.github/workflows/github_copilot_license_management.yml
@@ -10,6 +10,7 @@ env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   ENTERPRISE_ID: ${{ secrets.ENTERPRISE_ID }}
   ENTERPRISE_NAME: ${{ secrets.ENTERPRISE_NAME }}
+  ORGANIZATION_NAME: ${{ secrets.ORGANIZATION_NAME }}
 # This workflow contains two jobs: assign_github_copilot_license and remove_github_copilot_license
 jobs:
   assign_github_copilot_license:
@@ -121,10 +122,35 @@ jobs:
               appId: process.env.APP_ID,
               privateKey: process.env.PRIVATE_KEY
             });
-            return auth({ type: "app" });
+            const { token } = await auth({ type: "app" });
+
+            const response = await fetch("https://api.github.com/app/installations", {
+              headers: {
+                Authorization: `Bearer ${token}`,
+                Accept: "application/vnd.github+json"
+              }
+            });
+
+            const installations = await response.json();
+            // Find the installation for your org or repo
+            const installation = installations.find(i => i.account.login === process.env.ORGANIZATION_NAME); // or match by account.id, etc.
+            return installation.id;
+
+            console.log(`Installation ID: ${installation.id}`);
+
+
+            const auth = createAppAuth({
+              appId: process.env.APP_ID,
+              privateKey: process.env.PRIVATE_KEY,
+              installationId: installation.id
+            });
+            const { token } = await auth({ type: "installation", installationId: installation.id });
+            return token;
+
         env:
           APP_ID: ${{ secrets.APPLICATION_ID }}
           PRIVATE_KEY: ${{ secrets.APPLICATION_PRIVATE_KEY }}
+          ORGANIZATION_NAME: ${{ secrets.ORGANIZATION_NAME }}
       # This step finds the user's login email
       - name: Invite login email
         id: invite_login_email
