--- a/.github/workflows/github_copilot_license_management.yml
+++ b/.github/workflows/github_copilot_license_management.yml
@@ -11,6 +11,8 @@ env:
   ENTERPRISE_ID: ${{ secrets.ENTERPRISE_ID }}
   ENTERPRISE_NAME: ${{ secrets.ENTERPRISE_NAME }}
   ORGANIZATION_NAME: ${{ secrets.ORGANIZATION_NAME }}
+  CLIENT_ID: ${{ secrets.CLIENT_ID }}
+  CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
 # This workflow contains two jobs: assign_github_copilot_license and remove_github_copilot_license
 jobs:
   assign_github_copilot_license:
@@ -122,11 +124,11 @@ jobs:
               appId: process.env.APP_ID,
               privateKey: process.env.PRIVATE_KEY
             });
-            const { token } = await auth({ type: "app" });
+            const { token_ } = await auth({ type: "app" });
 
             const response = await fetch("https://api.github.com/app/installations", {
               headers: {
-                Authorization: `Bearer ${token}`,
+                Authorization: `Bearer ${token_}`,
                 Accept: "application/vnd.github+json"
               }
             });
@@ -144,7 +146,16 @@ jobs:
               installationId: installation.id
               });
               const { token2 } = await auth2({ type: "installation", installationId: installation.id });
-              return token2;
+
+              const auth3 = createAppAuth({
+                appId: process.env.APP_ID,
+                privateKey: process.env.PRIVATE_KEY,
+                clientId: process.env.CLIENT_ID,
+                clientSecret: process.env.CLIENT_SECRET
+              });
+
+              const token = await auth({ type: "oauth-app" });
+              return token;
             }
             return null;
 
@@ -153,6 +164,8 @@ jobs:
           PRIVATE_KEY: ${{ secrets.APPLICATION_PRIVATE_KEY }}
           ORGANIZATION_NAME: ${{ secrets.ORGANIZATION_NAME }}
           ENTERPRISE_NAME: ${{ secrets.ENTERPRISE_NAME }}
+          CLIENT_ID: ${{ secrets.CLIENT_ID }}
+          CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
       # This step finds the user's login email
       - name: Invite login email
         id: invite_login_email
