--- a/.github/workflows/github_copilot_license_management.yml
+++ b/.github/workflows/github_copilot_license_management.yml
@@ -120,18 +120,46 @@ jobs:
             const { createAppAuth } = require("@octokit/auth-app");
             const auth = createAppAuth({
               appId: process.env.APP_ID,
-              privateKey: process.env.PRIVATE_KEY,
-              clientId: process.env.CLIENT_ID,
-              clientSecret: process.env.CLIENT_SECRET
+              privateKey: process.env.PRIVATE_KEY
             });
-            const { token } = await auth({ type: "oauth-app" });
-            if (!token) {
-              throw new Error("Failed to generate token");
+            const { token_ } = await auth({ type: "app" });
+
+            const response = await fetch("https://api.github.com/app/installations", {
+              headers: {
+                Authorization: `Bearer ${token_}`,
+                Accept: "application/vnd.github+json"
+              }
+            });
+
+            const installations = await response.json();
+            console.log(installations);
+            // Find the installation for your org or repo
+            const installation = installations.find(i => i.account.slug === process.env.ENTERPRISE_NAME); // or match by account.id, etc.
+
+            if (installation) {
+              console.log(`Installation ID: ${installation.id}`);
+              const auth2 = createAppAuth({
+              appId: process.env.APP_ID,
+              privateKey: process.env.PRIVATE_KEY,
+              installationId: installation.id
+              });
+              const { token2 } = await auth2({ type: "installation", installationId: installation.id });
+
+              if token2) {
+                console.log(`Generated token: ${token2}`);
+                return token2;
+              } else {
+                console.error("Failed to generate token for installation.");
+                return null;
+              }
             }
-            return token;
+            return null;
+
         env:
           APP_ID: ${{ secrets.APPLICATION_ID }}
           PRIVATE_KEY: ${{ secrets.APPLICATION_PRIVATE_KEY }}
+          ORGANIZATION_NAME: ${{ secrets.ORGANIZATION_NAME }}
+          ENTERPRISE_NAME: ${{ secrets.ENTERPRISE_NAME }}
           CLIENT_ID: ${{ secrets.CLIENT_ID }}
           CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
       # This step finds the user's login email
