--- a/.github/workflows/github_copilot_license_management.yml
+++ b/.github/workflows/github_copilot_license_management.yml
@@ -164,14 +164,7 @@ jobs:
               installationId: process.env.INSTALLATION_ID
             });
             const { token } = await auth({ type: "installation", installationId: process.env.INSTALLATION_ID });
-
-              if (token) {
-                console.log(`Generated token: ${token}`);
-              } else {
-                console.error("Failed to generate token for installation.");
-              }
-            }
-            return token;
+            return token ? token : null;
       # This step finds the user's login email
       - name: Invite login email
         id: invite_login_email
@@ -181,7 +174,8 @@ jobs:
           GH_TOKEN: ${{ steps.get-installation-token.outputs.token }}
         with:
           script: |
-            const { Octokit } = require("@octokit/action");            
+            const { Octokit } = require("@octokit/action");
+            console.log(`Bearer ${process.env.GH_TOKEN})            
             const octokit = new Octokit();            
             const response_find = await octokit.graphql(`query {
               user(login: "${context.payload.sender.login}") {
