--- a/.github/workflows/github_copilot_license_management.yml
+++ b/.github/workflows/github_copilot_license_management.yml
@@ -143,8 +143,8 @@ jobs:
             const installation = installations.find(i => i.account.slug === process.env.ENTERPRISE_NAME); // or match by account.id, etc.
             console.log(installation);
             return installation ? installation.id : null;
-      - name: Get Installation Token
-        id: get-installation-token
+      - name: Get OAuth Token
+        id: get-oauth-token
         uses: actions/github-script@v7
         env:
           APP_ID: ${{ secrets.APPLICATION_ID }}
@@ -161,9 +161,10 @@ jobs:
             const auth = createAppAuth({
               appId: process.env.APP_ID,
               privateKey: process.env.PRIVATE_KEY,
-              installationId: process.env.INSTALLATION_ID
+              clientId: process.env.CLIENT_ID,
+              clientSecret: process.env.CLIENT_SECRET
             });
-            const { token } = await auth({ type: "installation", installationId: process.env.INSTALLATION_ID });
+            const { token } = await auth({ type: "oauth"});
             console.log(`Bearer ${token}`);
             return token ? token : null;
       # This step finds the user's login email
@@ -172,7 +173,7 @@ jobs:
         continue-on-error: true
         uses: actions/github-script@v7
         env:
-          GH_TOKEN: ${{ steps.get-installation-token.outputs.result }}
+          GH_TOKEN: ${{ steps.get-oauth-token.outputs.result }}
         with:
           script: |
             const { Octokit } = require("@octokit/action");
