--- a/.github/workflows/github_copilot_license_management.yml
+++ b/.github/workflows/github_copilot_license_management.yml
@@ -11,7 +11,7 @@ env:
   ENTERPRISE_ID: ${{ secrets.ENTERPRISE_ID }}
   ENTERPRISE_NAME: ${{ secrets.ENTERPRISE_NAME }}
   ORGANIZATION_NAME: ${{ secrets.ORGANIZATION_NAME }}
-# This workflow contains two jobs: assign_github_copilot_license and remove_github_copilot_license
+# This workflow contains two jobs: assign_github_copilot_license and invite_enterprise_member
 jobs:
   assign_github_copilot_license:
     name: Assign GitHub Copilot License
@@ -98,7 +98,7 @@ jobs:
               }
             });
 
-  remove_github_copilot_license:
+  invite_enterprise_member:
     name: Remove GitHub Copilot License
     # This job runs on the latest version of Ubuntu
     runs-on: ubuntu-latest
@@ -256,7 +256,7 @@ jobs:
             });
       # If the previous step failed, this step comments on the issue to notify about the failure
       - name: Comment GitHub Issue on failure
-        if: steps.remove_license.outcome == 'failure'        
+        if: steps.invite_login_email.outcome == 'failure'
         uses: actions/github-script@v7
         with:
           script: |
